@@ -10,6 +10,8 @@ Release Notes
 
 - If hide tabs setting on, still show tabs for panes with multiple tabs -
 
+- Multi-color cards containing a filtered color will no longer show up in catalogs -
+
 - Select abilities using context menu -
 Instead of displaying a dialog to select abilities, you'll now get a context menu when left or right clicking cards with multiple ability choices.
 Each ability will have a keyboard shortcut of 1-9 based on order.
